--- a/ClubSoft/Views/Personas/Index.cshtml
+++ b/ClubSoft/Views/Personas/Index.cshtml
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="~/css/Personas.css" asp-append-version="true" />
 
   <div class="p-3">
-      <h4>Agregar Nueva Persona<i class="fa-solid fa-plus ps-2"></i></h4>
+      <h4>Agregar Nueva Persona<i class="ms-2 fa-solid fa-square-plus"></i></h4>
       <div class="mb-2">
           <button type="button" onclick="ListadoPersonas()" class="btn btn-primary boton-color">
               Refrescar Tabla
@@ -14,64 +14,6 @@
               Nueva Persona
           </button>
       </div>
-  
-
-    @* MODAL AGREGAR *@
-      <div class="modal" tabindex="-1" id="ModalPersonas">
-          <div class="modal-dialog modal-md"> 
-            <div class="modal-content container-modal">
-                <div class="modal-header">
-                    <h5 class="modal-title text-color" id="ModalTitulo">Personas</h5>
-                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <form>
-                        <div class="row">
-                            <input type="hidden" id="PersonaID" value="0" />
-                            <div class="mb-2 col-md-6">
-                                <label for="Nombre" class="form-label fw-bold">Nombre</label>
-                                <input type="text" class="form-control" id="PersonaNombre" style="text-transform: uppercase" placeholder="">
-                            </div>
-                            <div class="mb-2 col-md-6">
-                                <label for="Apellido" class="form-label fw-bold">Apellido</label>
-                                <input type="text" class="form-control" id="PersonaApellido" placeholder="">
-                            </div>
-
-                            <div class="mb-2 col-md-6">
-                                <label for="Telefono" class="form-label fw-bold">Telefono</label>
-                                <input type="text" class="form-control" id="PersonaTelefono" style="text-transform: uppercase" placeholder="">
-                            </div>
-
-                            <div class="mb-2 col-md-6">
-                                <label for="Dni" class="form-label fw-bold">DNI</label>
-                                <input type="text" class="form-control" id="PersonaDni" style="text-transform: uppercase" placeholder="">
-                            </div>
-
-                            <div class="mb-2">
-                                <label for="Direccion" class="form-label fw-bold">Dirección</label>
-                                <input type="text" class="form-control" id="PersonaDireccion" style="text-transform: uppercase" placeholder="">
-                            </div>
-
-                            <div class="mb-2">
-                                <label for="LocalidadID" class="form-label fw-bold">Localidad</label>
-                                @Html.DropDownList("LocalidadID", null, htmlAttributes: new { @class = "form-control" })
-                            </div>
-
-                            <div class="mb-2">
-                                <label for="UsuarioID" class="form-label fw-bold">Usuario</label>
-                                <input type="text" class="form-control" id="UsuarioID" style="text-transform: uppercase" placeholder="">
-                            </div>
-                        </div>
-                    </form>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" onclick="LimpiarModal()" class="btn btn-secondary boton-color2" data-bs-dismiss="modal">Cancelar</button>
-                    <button type="button" onclick="GuardarRegistro()" class="btn btn-primary boton-color">Guardar</button>
-                </div>
-            </div>
-        </div>
-    </div>
-
 
     @*TABLA*@
     <div class="mt-2" style="heigth: 100%;">
@@ -96,6 +38,85 @@
                         <tbody id="tbody-Personas">
                         </tbody>
                     </table>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    @* MODAL AGREGAR *@
+      <div class="modal" tabindex="-1" id="ModalPersonas">
+          <div class="modal-dialog modal-md"> 
+            <div class="modal-content container-modal">
+                <div class="modal-header">
+                    <h5 class="modal-title text-color" id="ModalTitulo">Personas</h5>
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="row">
+                            <p><b>Los campos marcados con un asterisco (*) son obligatorios</b></p>
+                            <input type="hidden" id="PersonaID" value="0" />
+                            <div class="mb-2 col-md-6">
+                                <label for="Nombre" class="form-label fw-bold">Nombre *</label>
+                                <input type="text" class="form-control" id="PersonaNombre" style="text-transform: uppercase" placeholder="">
+                                <span id="errorMensajeNombre" style="color:red; display:none; font-size: 15px; padding-left: 4px;">
+                                    <i class="fa-solid fa-circle-exclamation pe-1"></i>Debe ingresar un nombre
+                                    </span>
+                            </div>
+                            <div class="mb-2 col-md-6">
+                                <label for="Apellido" class="form-label fw-bold">Apellido *</label>
+                                <input type="text" class="form-control" id="PersonaApellido" placeholder="">
+                                <span id="errorMensajeApellido" style="color:red; display:none; font-size: 15px; padding-left: 4px;">
+                                    <i class="fa-solid fa-circle-exclamation pe-1"></i>Debe ingresar un apellido
+                                    </span>
+                            </div>
+
+                            <div class="mb-2 col-md-6">
+                                <label for="Telefono" class="form-label fw-bold">Telefono *</label>
+                                <input type="text" class="form-control" id="PersonaTelefono" style="text-transform: uppercase" placeholder="">
+                                <span id="errorMensajeTelefono" style="color:red; display:none; font-size: 15px; padding-left: 4px;">
+                                    <i class="fa-solid fa-circle-exclamation pe-1"></i>Debe ingresar un telefono
+                                    </span>
+                            </div>
+
+                            <div class="mb-2 col-md-6">
+                                <label for="Dni" class="form-label fw-bold">DNI *</label>
+                                <input type="text" class="form-control" id="PersonaDni" style="text-transform: uppercase" placeholder="">
+                                <span id="errorMensajeDNI" style="color:red; display:none; font-size: 15px; padding-left: 4px;">
+                                    <i class="fa-solid fa-circle-exclamation pe-1"></i>Debe ingresar un DNI
+                                    </span>
+                            </div>
+
+                            <div class="mb-2">
+                                <label for="Direccion" class="form-label fw-bold">Dirección *</label>
+                                <input type="text" class="form-control" id="PersonaDireccion" style="text-transform: uppercase" placeholder="">
+                                <span id="errorMensajeDireccion" style="color:red; display:none; font-size: 15px; padding-left: 4px;">
+                                    <i class="fa-solid fa-circle-exclamation pe-1"></i>Debe ingresar una direccion
+                                    </span>
+                            </div>
+                            
+
+                            <div class="mb-2">
+                                <label for="LocalidadID" class="form-label fw-bold">Localidad *</label>
+                                <div class="input-group">
+                                @Html.DropDownList("LocalidadID", null, htmlAttributes: new { @class = "form-control" })
+                                <a class="btn btn-primary boton-color" type="button" id="button-addon2" asp-controller="Localidades" asp-action="Index">Agregar nueva +</a>
+                                </div>
+                                <span id="errorMensajeLocalidad" style="color:red; display:none; font-size: 15px; padding-left: 4px;">
+                                    <i class="fa-solid fa-circle-exclamation pe-1"></i>Debe ingresar una localidad
+                                    </span>
+                            </div>
+
+                            <div class="mb-2">
+                                <label for="UsuarioID" class="form-label fw-bold">Usuario</label>
+                                <input type="text" class="form-control" id="UsuarioID" style="text-transform: uppercase" placeholder="">
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" onclick="LimpiarModal()" class="btn btn-secondary boton-color2" data-bs-dismiss="modal">Cancelar</button>
+                    <button type="button" onclick="GuardarRegistro()" class="btn btn-primary boton-color">Guardar</button>
                 </div>
             </div>
         </div>
