--- a/ClubSoft/Views/Eventos/Index.cshtml
+++ b/ClubSoft/Views/Eventos/Index.cshtml
@@ -12,45 +12,6 @@
         </button>
     </div>
      
-    @* MODAL AGREGAR *@
-      <div class="modal" tabindex="-1" id="ModalEventos">
-         <div class="modal-dialog modal-md">
-            <div class="modal-content container-modal">
-                <div class="modal-header">
-                    <h5 class="modal-title text-color" id="ModalTitulo"></h5>
-                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <form>
-                        <div class="row">
-                            <input type="hidden" id="EventoID" value="0" />
-                            <div class="mb-2 col-md-12">
-                                <label for="TipoEventoID" class="form-label fw-bold">Tipo de evento</label>
-                                @Html.DropDownList("TipoEventoID", null, htmlAttributes: new { @class = "form-control" })
-                            </div>
-                            <div class="mb-2 col-md-12">
-                                <label for="DescripcionEvento" class="form-label fw-bold">Descripcion del evento</label>
-                                <input type="text" class="form-control" id="DescripcionEvento" placeholder="">
-                            </div>
-                            <div class="mb-2 col-md-12">
-                                <label for="FechaEvento" class="form-label fw-bold">Fecha Del Evento</label>
-                                <input type="datetime-local" class="form-control" id="FechaEvento" 
-                                  value="@DateTime.Now.ToString("yyyy-MM-dd HH:mm")" />
-                            </div>
-                            <div class="mb-2 col-md-12">
-                                <label for="Lugar" class="form-label fw-bold">Lugar</label>
-                                <input type="text" class="form-control" id="Lugar" placeholder="">
-                            </div>
-                        </div>
-                    </form>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" onclick="LimpiarModal()" class="btn btn-secondary boton-color2" data-bs-dismiss="modal">Cancelar</button>
-                    <button type="button" onclick="GuardarRegistro()" class="btn btn-primary boton-color">Guardar</button>
-                </div>
-            </div>
-        </div>
-    </div>
 
     @* TABLA *@
     <div class="mt-2" style="heigth: 100%;">
@@ -63,6 +24,67 @@
             </div>
         </div>
     </div>
+
+    @* MODAL AGREGAR *@
+      <div class="modal" tabindex="-1" id="ModalEventos">
+         <div class="modal-dialog modal-md">
+            <div class="modal-content container-modal">
+                <div class="modal-header">
+                    <h5 class="modal-title text-color" id="ModalTitulo"></h5>
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="row">
+                            <p><b>Los campos marcados con un asterisco (*) son obligatorios</b></p>
+                            <input type="hidden" id="EventoID" value="0" />
+                            
+                            <div class="mb-2 col-md-12">
+                                <label for="TipoEventoID" class="form-label fw-bold">Tipo de evento *</label>
+                                <div class="input-group">
+                                    @Html.DropDownList("TipoEventoID", null, htmlAttributes: new { @class = "form-control" })
+                                    <a class="btn btn-primary boton-color" type="button" id="button-addon2" asp-controller="TipoEventos" asp-action="Index">Agregar nuevo +</a>
+                                </div>
+                                <span id="errorMensajeTipoEvento" style="color:red; display:none; font-size: 15px; padding-left: 4px;">
+                                    <i class="fa-solid fa-circle-exclamation pe-1"></i>Debe seleccionar un tipo de evento
+                                    </span>
+                            </div>
+                            
+                            <div class="mb-2 col-md-12">
+                                <label for="DescripcionEvento" class="form-label fw-bold">Descripcion del evento *</label>
+                                <input type="text" class="form-control" id="DescripcionEvento" placeholder="">
+                                <span id="errorMensajeDescripcion" style="color:red; display:none; font-size: 15px; padding-left: 4px;">
+                                    <i class="fa-solid fa-circle-exclamation pe-1"></i>Debe ingresar una descripcion
+                                    </span>
+                            </div>
+                            <div class="mb-2 col-md-12">
+                                <label for="FechaEvento" class="form-label fw-bold">Fecha Del Evento *</label>
+                                <input type="datetime-local" class="form-control" id="FechaEvento" 
+                                  value="@DateTime.Now.ToString("yyyy-MM-dd HH:mm")" />
+                                <span id="errorMensajeFecha" style="color:red; display:none; font-size: 15px; padding-left: 4px;">
+                                    <i class="fa-solid fa-circle-exclamation pe-1"></i>Debe ingresar una fecha
+                                    </span>  
+                            </div>
+                            <div class="mb-2 col-md-12">
+                                <label for="Lugar" class="form-label fw-bold">Lugar *</label>
+                                <input type="text" class="form-control" id="Lugar" placeholder="">
+                                <span id="errorMensajeLugar" style="color:red; display:none; font-size: 15px; padding-left: 4px;">
+                                    <i class="fa-solid fa-circle-exclamation pe-1"></i>Debe ingresar un lugar
+                                    </span>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" onclick="LimpiarModal()" class="btn btn-secondary boton-color2" data-bs-dismiss="modal">Cancelar</button>
+                    <button type="button" onclick="GuardarRegistro()" class="btn btn-primary boton-color">Guardar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
 </div>
 
 @section Scripts{
