validaciones vista tipo productos

--- a/ClubSoft/Views/TipoProductos/Index.cshtml
+++ b/ClubSoft/Views/TipoProductos/Index.cshtml
@@ -9,6 +9,9 @@
       <div class="col-md-3">
         <input type="text" class="form-control" id="TipoProductoNombre" style="text-transform:uppercase"
           placeholder="Nombre del tipo de producto">
+        <span id="errorMensaje" style="color:red; display:none; font-size: 15px; padding-left: 4px;">
+          <i class="fa-solid fa-circle-exclamation pe-1"></i>Debe ingresar un valor
+          </span>  
       </div>
       <div class="col-md-3">
         <button type="button" onclick="GuardarRegistro()" class="btn btn-primary">Guardar</button>
