Cambio estilo modal y botones

--- a/ClubSoft/Views/Localidades/Index.cshtml
+++ b/ClubSoft/Views/Localidades/Index.cshtml
@@ -21,7 +21,7 @@
         <span id="errorMensajeProvincia" style="color:red; display:none; font-size: 15px; padding-left: 4px;"><i class="fa-solid fa-circle-exclamation pe-1"></i>Debe seleccionar una provincia</span>
     </div>
     <div class="col-md-3">
-      <button type="button" onclick="GuardarRegistro()" class="btn btn-primary">Guardar</button>
+      <button type="button" onclick="GuardarRegistro()" class="btn boton-color">Guardar</button>
     </div>
   </div>
 </div>
