--- a/ClubSoft/Views/Personas/Index.cshtml
+++ b/ClubSoft/Views/Personas/Index.cshtml
@@ -7,10 +7,10 @@
   <div class="p-3">
       <h4>Agregar Nueva Persona<i class="ms-2 fa-solid fa-square-plus"></i></h4>
       <div class="mb-2">
-          <button type="button" onclick="ListadoPersonas()" class="btn btn-primary boton-color">
+          <button type="button" onclick="ListadoPersonas()" class="btn boton-color">
               Refrescar Tabla
           </button>
-          <button type="button" class="btn btn-primary boton-color" onclick="NuevaPersona()" data-bs-toggle="modal" data-bs-target="#ModalPersonas">
+          <button type="button" class="btn boton-color" onclick="NuevaPersona()" data-bs-toggle="modal" data-bs-target="#ModalPersonas">
               Nueva Persona
           </button>
       </div>
@@ -116,7 +116,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" onclick="LimpiarModal()" class="btn btn-secondary boton-color2" data-bs-dismiss="modal">Cancelar</button>
-                    <button type="button" onclick="GuardarRegistro()" class="btn btn-primary boton-color">Guardar</button>
+                    <button type="button" onclick="GuardarRegistro()" class="btn boton-color">Guardar</button>
                 </div>
             </div>
         </div>
