--- a/ClubSoft/Views/Provincias/Index.cshtml
+++ b/ClubSoft/Views/Provincias/Index.cshtml
@@ -15,7 +15,7 @@
           </span>
       </div>
       <div class="col-md-3">
-        <button type="button" onclick="GuardarRegistro()" class="btn btn-primary">Guardar</button>
+        <button type="button" onclick="GuardarRegistro()" class="btn boton-color">Guardar</button>
       </div>
   </div>
 </div>
