--- a/ClubSoft/Views/TipoEventos/Index.cshtml
+++ b/ClubSoft/Views/TipoEventos/Index.cshtml
@@ -2,6 +2,7 @@
     ViewData["Title"] = "Tipo de Eventos";
 }
 <link rel="stylesheet" href="~/css/Localidades.css" asp-append-version="true" />
+<link rel="stylesheet" href="~/css/TipoEventos.css" asp-append-version="true" />
 
 <div class="p-3">
   <div class="row">
@@ -15,7 +16,7 @@
           </span>
       </div>
       <div class="col-md-3">
-        <button type="button" onclick="GuardarRegistro()" class="btn btn-primary">Guardar</button>
+        <button type="button" onclick="GuardarRegistro()" class="btn boton-color">Guardar</button>
       </div>
   </div>
 </div>
