--- a/ClubSoft/Views/TipoProductos/Index.cshtml
+++ b/ClubSoft/Views/TipoProductos/Index.cshtml
@@ -2,6 +2,8 @@
     ViewData["Title"] = "Tipo de Productos";
 }
 
+<link rel="stylesheet" href="~/css/TipoProductos.css" asp-append-version="true" />
+
 <div class="p-3">
   <div class="row">
       <h4>Agregar Nuevo Tipo de Producto<i class="ms-2 fa-solid fa-square-plus"></i></h4>
@@ -14,7 +16,7 @@
           </span>  
       </div>
       <div class="col-md-3">
-        <button type="button" onclick="GuardarRegistro()" class="btn btn-primary">Guardar</button>
+        <button type="button" onclick="GuardarRegistro()" class="btn boton-color">Guardar</button>
       </div>
   </div>
 </div>
