mayuscula en vistas

--- a/ClubSoft/Views/Eventos/Index.cshtml
+++ b/ClubSoft/Views/Eventos/Index.cshtml
@@ -52,7 +52,7 @@
                             
                             <div class="mb-2 col-md-12">
                                 <label for="DescripcionEvento" class="form-label fw-bold">Descripcion del evento *</label>
-                                <input type="text" class="form-control" id="DescripcionEvento" placeholder="">
+                                <input type="text" class="form-control" id="DescripcionEvento"style="text-transform:uppercase "placeholder="">
                                 <span id="errorMensajeDescripcion" style="color:red; display:none; font-size: 15px; padding-left: 4px;">
                                     <i class="fa-solid fa-circle-exclamation pe-1"></i>Debe ingresar una descripcion
                                     </span>
@@ -67,7 +67,7 @@
                             </div>
                             <div class="mb-2 col-md-12">
                                 <label for="Lugar" class="form-label fw-bold">Lugar *</label>
-                                <input type="text" class="form-control" id="Lugar" placeholder="">
+                                <input type="text" class="form-control" id="Lugar"style="text-transform:uppercase " placeholder="">
                                 <span id="errorMensajeLugar" style="color:red; display:none; font-size: 15px; padding-left: 4px;">
                                     <i class="fa-solid fa-circle-exclamation pe-1"></i>Debe ingresar un lugar
                                     </span>
