Cambio borde botones

--- a/ClubSoft/wwwroot/css/Personas.css
+++ b/ClubSoft/wwwroot/css/Personas.css
@@ -11,6 +11,7 @@
 .boton-color {
     background-color: rgb(12, 12, 86);
     color: white;
+    border-color: rgb(12, 12, 86);
 }
 
 .boton-color2 {
