--- a/ClubSoft/wwwroot/css/Productos.css
+++ b/ClubSoft/wwwroot/css/Productos.css
@@ -10,6 +10,7 @@
 .boton-color {
     background-color: rgb(12, 12, 86);
     color: white;
+    border-color: rgb(12, 12, 86);
 }
 
 .boton-color:hover {
