--- a/ClubSoft/wwwroot/css/Localidades.css
+++ b/ClubSoft/wwwroot/css/Localidades.css
@@ -12,6 +12,7 @@
   .boton-color {
     background-color: rgb(12, 12, 86);
     color: white;
+    border-color: rgb(12, 12, 86);
   }
 
   .boton-color:hover {
