--- a/ClubSoft/Views/Shared/_Layout.cshtml
+++ b/ClubSoft/Views/Shared/_Layout.cshtml
@@ -32,6 +32,7 @@
                 <a class="list-group-item list-group-item-action text-light" asp-area="" asp-controller="TipoProductos" asp-action="Index">Tipo de Productos</a>
                 <a class="list-group-item list-group-item-action text-light" asp-area="" asp-controller="Provincias" asp-action="Index"><i class="fas fa-map-marker-alt pe-2"></i>Provincias</a>
                 <a class="list-group-item list-group-item-action text-light" asp-area="" asp-controller="Localidades" asp-action="Index"><i class="fas fa-city pe-2"></i>Localidades</a>
+                <a class="list-group-item list-group-item-action text-light" asp-area="" asp-controller="Ventas" asp-action="Index"><i class="fas fa-city pe-2"></i>Ventas</a>
                 <a class="list-group-item list-group-item-action text-light" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
             </div>
         </div>
